--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,5 @@ DATABASE_URL=postgresql://stock:stock@db:5432/stock_server
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+JWT_SECRET=fitbodysecret
+ALGORITHM=HS256
